--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vcl/form-control-label": "^0.6.3",
     "axios": "0.23.0",
     "bootstrap": "5.1.3",
     "moment": "2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "2.0.0",
     "react-dom": "^17.0.2",
+    "react-radio-group": "^3.0.3",
     "react-router-dom": "5.3.0",
     "react-scripts": "5.0.1",
+    "react-tabs": "4.0.0",
     "react-toastify": "8.0.2",
     "web-vitals": "^2.1.4"
   },
